--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,6 +14,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AAHAR100"
         tools:targetApi="31">
+        <activity
+            android:name=".History"
+            android:exported="false" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/YOUR_API_KEY" />
+
+        <activity
+            android:name=".Receive"
+            android:exported="false"
+            android:label="@string/title_activity_receive" />
+        <activity
+            android:name=".FoodMap"
+            android:exported="false"
+            android:label="@string/title_activity_food_map" />
         <activity
             android:name=".UserProfileActivity"
             android:exported="false" />
@@ -43,11 +56,6 @@
         <activity
             android:name=".about"
             android:exported="false" />
-
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/YOUR_API_KEY" />
-
         <activity
             android:name=".Donate"
             android:exported="false"
