stable version 3 History

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     // auth + real-time database + core + storage---------------------------------------------------------------
     implementation 'com.google.firebase:firebase-auth:22.0.0'
     implementation 'com.google.firebase:firebase-database:20.2.1'
+    implementation 'com.firebaseui:firebase-ui-database:7.1.1'
     implementation 'com.google.firebase:firebase-storage:20.2.0'
     implementation 'com.google.firebase:firebase-core:21.1.1'
     //Google map libraries ----------------------------------------------------------------------------------------
